tests/diagnostics/declarations/functions/unknown_type_parameter/expect.txt
# exit: 1
lib.coppice:1:29: error: unknown type 'U'
  function identity[T](value: U) -> T {
                              ^
